--- a/src/main/java/com/mycompany/continuada1/Monitoramento.form
+++ b/src/main/java/com/mycompany/continuada1/Monitoramento.form
@@ -101,13 +101,13 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="lblMaxCPU" min="-2" max="-2" attributes="0"/>
+                                      <Component id="lblMaximoCPU" min="-2" max="-2" attributes="0"/>
                                       <Component id="lblMdCPU" min="-2" max="-2" attributes="0"/>
                                       <Component id="lblMinCPU" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="lblMaxCPUvalor" min="-2" max="-2" attributes="0"/>
+                                      <Component id="lblMaxCPU" min="-2" max="-2" attributes="0"/>
                                       <Component id="lblMdCPUvalor" alignment="1" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -160,7 +160,7 @@
                       <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
                           <Component id="barCPU" min="-2" pref="48" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
-                              <Component id="lblMaxCPU" min="-2" max="-2" attributes="0"/>
+                              <Component id="lblMaximoCPU" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="lblMinCPU" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -173,7 +173,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <Component id="lblMaxCPUvalor" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblMaxCPU" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
@@ -254,7 +254,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLeituraActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblMaxCPU">
+        <Component class="javax.swing.JLabel" name="lblMaximoCPU">
           <Properties>
             <Property name="text" type="java.lang.String" value="M&#xe1;ximo:"/>
           </Properties>
@@ -269,7 +269,7 @@
             <Property name="text" type="java.lang.String" value="M&#xe9;dia:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblMaxCPUvalor">
+        <Component class="javax.swing.JLabel" name="lblMaxCPU">
           <Properties>
             <Property name="text" type="java.lang.String" value=" 00GB"/>
           </Properties>
